# zdr

./: Cargo.toml  README.md
dbus-1/: org.zdr.Authenticator.conf
pam-zdr/: Cargo.toml
pam-zdr/src/: lib.rs
zdrd/: Cargo.toml
zdrd/src/: args.rs  main.rs  recognize.rs  snap.rs
