[package]
name = "pam-zdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pam_zdr"
crate-type = ["cdylib"]

[dependencies]
pam-bindings = "0.1.1"
rand = "0.8.5"
zbus = { version = "4.1.1", features = ["blocking"] }
